<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>core</artifactId>
        <groupId>com.thitsaworks.operation_portal.core</groupId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>mod_hub_services</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.thitsaworks.operation_portal.component</groupId>
            <artifactId>mod_fspiop</artifactId>
        </dependency>
        <dependency>
            <groupId>com.thitsaworks.operation_portal.component</groupId>
            <artifactId>mod_misc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.thitsaworks.operation_portal.component</groupId>
            <artifactId>mod_infra</artifactId>
        </dependency>
        <dependency>
            <groupId>com.thitsaworks.operation_portal.core</groupId>
            <artifactId>mod_iam</artifactId>
        </dependency>
        <dependency>
            <groupId>com.thitsaworks.operation_portal.core</groupId>
            <artifactId>mod_participant</artifactId>
        </dependency>
        <dependency>
            <groupId>com.thitsaworks.operation_portal.core</groupId>
            <artifactId>mod_hub_user</artifactId>
        </dependency>
    </dependencies>
</project>